  * Respect tronview -n option for stdout/stderr output. Fixes #41 (ebaum)
  * Show warnings option for tronview. Fixes #46 (ebaum)
  * Suppress headers option for tronview. (ebaum)
  * Fix an issue where default empty config failed to apply. (rhettg)
  * Add versioning to both tron module, command and state file (rhettg)
  * Set umask on daemon to allow proper pid-file control (rhettg)

 -- Rhett Garber <rhettg@gmail.com>  Fri, 14 Jan 2011 13:10:00 -0800

tron (0.1.9-1) unstable; urgency=low

  * Fix issue with config changes causing previous job runs to be in an
    unstable state. #42 (ebaum)

 -- Rhett Garber <rhettg@gmail.com>  Mon, 14 Dec 2010 14:12:00 -0800

tron (0.1.8-1) unstable; urgency=low

  * Address issue with bad format strings in commands causing untold
    disasters. #45 (rhettg)

 -- Rhett Garber <rhettg@gmail.com>  Mon, 06 Dec 2010 17:38:00 -0800

tron (0.1.7-1) unstable; urgency=low

  * Improve log rotation scripts under Debian (jbrown)
  * Fix an issue where removing a job with a live reconfig caused the job not to actually be removed. #44 (rhettg)
  * Some logging changes to make debugging issues easier (rhettg)
  * Some cleanup and better error/delay handling around process control for state writing. (rhettg)

 -- Rhett Garber <rhettg@gmail.com>  Mon, 22 Nov 2010 15:52:00 -0800

tron (0.1.6-1) unstable; urgency=low

  * Fix issue with live reconfigs causing intervals to be skipped (rhettg)
  * Added log file re-opening on SIGHUP (fixes #37) (rhettg)
  * Fix some issues with cmp functions for jobs that caused incorrect
    reconfigs (#38) (mtytel)
  * Fix issue with manually starting all_node jobs/services (mtytel)
  
 -- Rhett Garber <rhettg@gmail.com>  Fri, 15 Oct 2010 15:05:00 -0700

tron (0.1.5-1) unstable; urgency=low

  * Fixed crash due to config bug where SSH options were sometimes missing (rhettg)
  * Tweaks to command line interface (rhettg)
  
 -- Rhett Garber <rhettg@gmail.com>  Wed, 14 Sep 2010 10:14:00 -0700
